--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,7 +33,7 @@
         <div>
         <ul style="color: white; list-style-type: none;  float: right;">
             <li>
-                <a href="DP.html">Home</a>
+                <a href="Portfolio.html">Home</a>
             </li>
             &nbsp;
             <li>
