--- a/Portfolio.html
+++ b/Portfolio.html
@@ -37,20 +37,20 @@
             </li>
             &nbsp;
             <li>
-                <a href="DP.html">Portfolio</a>
+                <a href="Portfolio.html">Portfolio</a>
             </li>
             &nbsp;
 
             <li>
-                <a href="DP.html">Hobbies</a>
+                <a href="Portfolio.html">Hobbies</a>
             </li>
             &nbsp;
             <li>
-                <a href="DP.html">Certifications</a>
+                <a href="Portfolio.html">Certifications</a>
             </li>
             &nbsp;
             <li>
-                <a href="DP.html">Contact Me!</a>
+                <a href="Portfolio.html">Contact Me!</a>
             </li>
 
         </ul>
